--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.4",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "slick-carousel": "^1.8.1"
   },
   "dependencies": {
     "browser-sync": "^2.29.1",
