--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.4",
+    "rateyo": "^2.3.2",
     "sass": "^1.62.1",
     "slick-carousel": "^1.8.1"
   },
